--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+* {
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Noto Sans KR', sans-serif;
+    text-align: center;
+    width: 100%;
+    padding: 30px 0px;
+    color: #ffffff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a { 
+  pointer-events: initial;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  color: #525252;
+  font-size: 2.8em;
+  font-weight: 200;
+  margin: 0px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav {
+  margin-top: 35px;
 }
-
-.App-link {
-  color: #61dafb;
+nav ul {
+  list-style: none
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li {
+  margin: 0 15px;
+  display: inline-block;
+}
+nav ul li a {
+  font-size: 1.05em;
+  font-weight: 300;
+  text-decoration: none;
+  color: black;
+  transition-duration: 0.3s;
+}
+nav ul li a:hover {
+  color: #ed5207
 }
